# diffn_models

./: .editorconfig  .gitignore  cactus_filter.pgf  cactus_prod_shelf.pgf  cactus_rect.pgf  container.pgf  result_container.csv  results.md  results_rect.csv  run_benchmark.py  run_benchmarks_carpet.py  run_benchmarks_container.py  run_benchmarks_filter.py  run_benchmarks_prod_shelf.py  run_benchmarks_rect.py
boxes-and-shelves/: bs01.dzn  (+3 more)
huub/crates/huub/: Cargo.toml
huub/crates/huub/src/: actions.rs  brancher.rs  branchers.rs  constraints.rs  flatzinc.rs  helpers.rs  lib.rs  model.rs  propagator.rs  reformulate.rs  solver.rs  tests.rs
huub/crates/huub/src/constraints/: bool_array_element.rs  disjunctive_strict.rs  int_abs.rs  int_all_different.rs  int_array_element.rs  int_array_minimum.rs  int_div.rs  int_in_set.rs  int_linear.rs  int_pow.rs  int_table.rs  int_times.rs
huub/crates/huub/src/helpers/: linear_transform.rs  opt_field.rs
huub/crates/huub/src/model/: bool.rs  branching.rs  constraint.rs  flatzinc.rs  int.rs  reformulate.rs
huub/crates/huub/src/propagator/: all_different_int.rs  array_int_minimum.rs  array_var_int_element.rs  disjunctive_strict.rs  int_abs.rs  int_div.rs  int_lin_le.rs  int_lin_ne.rs  int_pow.rs  int_times.rs  table_int.rs
huub/crates/huub/src/solver/: activation_list.rs  bool_to_int.rs  engine.rs  initialization_context.rs  int_var.rs  poster.rs  queue.rs  solving_context.rs  trail.rs  value.rs  view.rs
huub/crates/huub/src/solver/engine/: activation_list.rs  bool_to_int.rs  int_var.rs  queue.rs  solving_context.rs  trail.rs
(+21091 files in other folders)
