[package]
name = "huub"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
delegate = "0.12"
flatzinc-serde = { workspace = true }
index_vec = "0.1.3"
itertools = "0.13.0"
pindakaas = { git = "https://github.com/pindakaashq/pindakaas.git", features = [
	"external-propagation",
] }
rangelist = "0.2"
thiserror = "2.0"
tracing = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
tracing-test = "0.2.5"

[lints]
workspace = true
